# matrix-easy-deploy

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION.md  README.md  RELEASING.md  apply.sh  backup.sh  bootstrap-from-backup.sh  deploy.yaml.example  ensure_dependencies.sh  matrix-wizard.sh  pyproject.toml  requirements-dev.txt  restore.sh  run_unittests.py  start.sh  stop.sh  test  uninstall.sh  update.sh
caddy/: Caddyfile-no-element.template  Caddyfile.template  docker-compose.yml
scripts/: apply.py  backup_config.py  backup_crypto.sh  backup_payload.py  backup_payload.sh  backup_schedule.py  bridge_appservice_tokens.py  bridge_config_patch.py  bridge_registration_patch.py  config_edit.py  container-entrypoint.sh  create-account.sh  create-admin.sh  create-user.sh  env_upsert.py  homeserver.py  hookshot-check.sh  hookshot_caddy.py  hookshot_synapse_features.py  lib.sh  mas.sh  mas_config.py  mas_health.sh  med-admin.sh  med_admin.py  module_common.sh  restore_payload.sh  runtime_state.py  sso.sh  state_secrets.py  synapse_appservice.py  tuwunel_admin.py  tuwunel_admin.sh  tuwunel_appservice.py  whatsapp_bridge_check.sh
tests/: __init__.py  conftest.py  test_apply.py  test_apply_parametrize.py  test_backup_config.py  test_backup_payload.py  test_backup_restore_scripts.py  test_backup_schedule.py  test_bridge_appservice_tokens.py  test_bridge_config_patch.py  test_bridge_registration_patch.py  test_config_edit.py  test_config_edit_parametrize.py  test_env_upsert.py  test_homeserver.py  test_hookshot_caddy.py  test_hookshot_setup_noninteractive.py  (+14 more)
(+37 files in other folders)
