[project]
name = "matrix-easy-deploy"
version = "0.0.0"
description = "Matrix homeserver deployment toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
