[project]
name = "matrix-easy-deploy"
version = "0.0.0"
description = "Matrix homeserver deployment toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: invokes bash/subprocess against copied scripts",
    "slow: tests that take >1s or spin up mock servers",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
